# DigitalSphinx2026

./: .gitignore  CITATION.cff  README.md  environment-cpu.yaml  environment-gpu.yaml  pyproject.toml
configs/: config.yaml
configs/anatomy/: v1.yaml  v2.yaml
configs/connectome/: C_elegans_VRNN.yaml
configs/dataset/: imitation_walk_anipose_data_v1.yaml
configs/paths/: default.yaml  hyak.yaml  tillicum.yaml
configs/training/: ppo_base.yaml  ppo_basic_imitation_low_kl.yaml
configs/training/anatomy/: v1.yaml  v2.yaml  v2_T1.yaml  v2_fast_simple.yaml  v2_legs.yaml
configs/training/network/: intention.yaml  intention_ws.yaml  simple_mlp.yaml
data/connectome/C.elegans/: connectivity_matrix_123025.csv  motor_head_motor_neuron_indices.txt
data/connectome/C_elegans/: W_hh_123025.npy  command_neuron_indices.txt  download_worm_data.ipynb  motor_head_motor_command_neuron_indices.txt  motor_neuron_indices.txt  neuron_types.csv  preproc_worm_data_123025.ipynb  sensory_neuron_indices.txt
notebooks/: RL_basic_viz.ipynb  Viz.ipynb
scripts/: klone_run.py  tillicum_run.py  train_basic_imitation.py
sphinx_training/: .gitignore  __init__.py  environment.yml
sphinx_training/assets/fruitfly_body_models/: README.md
sphinx_training/envs/: __init__.py
sphinx_training/envs/fruitfly/: __init__.py  base.py  base_Ev1.py  constants.py  env_utils.py  imitation.py  imitation_Ev1.py  reference_clips.py  state_generator_env.py
sphinx_training/preprocessing/: __init__.py  mjx_preprocess.py
sphinx_training/scripts/: __init__.py  test_configs.py
sphinx_training/training/: __init__.py  checkpointing.py  ckpt_utils.py  network_masks.py  wrappers.py
sphinx_training/training/mlp_ppo/: __init__.py  custom_networks.py  losses.py  mlp_ppo.py  ppo_networks.py
sphinx_training/utils/: Vector_utils.py  __init__.py  data_utils.py  fly_logging.py  path_utils.py  quaternions.py  rollout_saver.py  utils.py  viz_utils.py
